<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Note And Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_task">Task</string>
    <string name="tab_note">Note</string>
    <string name="tab_setting">Setting</string>
    <string name="tasks">Tasks</string>
    <string name="notes">Notes</string>
    <string name="settings">Setting</string>
    <string name="next_7_days">Next 7 Days</string>
    <string name="all_tasks">All Tasks</string>
    <string name="my_lists">My Lists</string>
    <string name="category_name">Category Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="due_date">Due date</string>
    <string name="task_list_is_empty">Task list is empty!</string>
    <string name="create_a_new_task">create a new task</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="notification_title">Note and Todo list is running</string>
    <string name="notification_message">tap here to stop</string>
    <string name="close">Close</string>
    <string name="today_task">Today Task</string>
    <string name="request_draw_overlay">We need draw over other app to show your today task as soon as you open your device</string>
    <string name="permission_required">Permission required</string>
    <string name="delete">Delete</string>
    <string name="loading_ads" tools:ignore="TypographyEllipsis">Loading Ads ...</string>
    <string name="general">General</string>
    <string name="language">Languages</string>
    <string name="show_done_task">Show done tasks</string>
    <string name="notify_when_open_device">Notify when open device</string>
    <string name="about_application">About application</string>
    <string name="privacy_and_policy">Privacy And Policy</string>
    <string name="term_of_use">Term of use</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="english">English</string>
    <string name="report_bugs">Help us Report bugs</string>
    <string name="search_note">search notes</string>
    <string name="title">Title</string>
    <string name="start_editing">start editing</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="russia">Russia</string>
    <string name="hindi">Hindi</string>
    <string name="japanese">Japanese</string>
    <string name="italian">Italian</string>
    <string name="spanish">Spanish</string>
    <string name="date">date</string>
    <string name="information">information</string>
    <string name="datetime">datetime</string>
    <string name="custom_time">Custom time</string>
    <string name="hour">Hour</string>
    <string name="min">Min</string>
    <string name="sec">Sec</string>
</resources>
