<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        tools:context=".todo.category.TaskCategoryFragment">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchNote"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingHorizontal="1dp"
            android:background="@drawable/bg_gray_rounded"
            app:queryBackground="@color/transparent"
            app:iconifiedByDefault="false"
            app:defaultQueryHint="Tìm kiếm ghi chú" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/all_task"
                style="@style/todo_category_card"
                android:layout_marginEnd="6dp"
                android:layout_height="80dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:src="@drawable/ic_all_task"
                    android:layout_width="24dp"
                    android:layout_height="24dp"/>
                <TextView
                    android:text="@string/all_tasks"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/next_7_days"
                style="@style/todo_category_card"
                android:layout_marginStart="6dp"
                android:layout_height="80dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:src="@drawable/ic_calendar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"/>
                <TextView
                    android:text="@string/next_7_days"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:text="@string/my_lists"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:letterSpacing="0.05"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_list_rv"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/layout_task_category_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
