<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingHorizontal="20dp"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:background="@drawable/bg_rounded_dialog"
            android:paddingTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text"
                tools:text="@tools:sample/lorem/random"
                android:hint="@string/create_a_new_list"
                android:inputType="textMultiLine"
                android:lines="4"
                android:textStyle="bold"
                android:gravity="top"
                android:textSize="25sp"
                android:lineHeight="35dp"
                android:letterSpacing="0.02"
                android:paddingHorizontal="20dp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                tools:targetApi="p" />
            <View
                android:layout_marginTop="12dp"
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <RelativeLayout
                android:id="@+id/due_date_container"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ic_calendar"
                    android:src="@drawable/ic_calendar_1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"/>
                <TextView
                    android:text="@string/due_date"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@id/ic_calendar"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/due_date"
                    tools:text="@tools:sample/date/mmddyy"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:layout_toStartOf="@id/ic_right"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/ic_right"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_marginStart="12dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="20dp"
                    android:layout_height="14dp"/>
            </RelativeLayout>

            <View
                android:layout_marginTop="12dp"
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="50dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel_button"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/cancel"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:background="@color/transparent"
                    android:layout_height="match_parent"/>
                <View
                    android:background="@color/gray"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save_button"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/save"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:enabled="false"
                    android:textColor="@color/faded_blue"
                    android:background="@color/transparent"
                    android:layout_height="match_parent"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
